--- a/.env.yaml
+++ b/.env.yaml
@@ -22,5 +22,5 @@ MLFLOW_MODEL_NAME: "taxifare_MonicaVenzor_all" # UPDATE THIS
 PREFECT_FLOW_NAME: "taxifare_lifecycle_MonicaVenzor" # UPDATE THIS
 PREFECT_LOG_LEVEL: "WARNING"
 
-GAR_IMAGE: "image-name"
+GAR_IMAGE: "taxifare"
 GAR_MEMORY: "2Gi"
